Fixed some minor layout issues in PlayerView

--- a/src/components/scoreView/score.css
+++ b/src/components/scoreView/score.css
@@ -45,7 +45,6 @@
 
 .board {
     box-shadow: 0px 6px 2px rgba(177, 177, 177, 0.2);
-    margin: 5rem;
 }
 
 .round {
